// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toMatchRight() fails when regular expression matches a string on the right 1`] = `
"expect(received).not.toMatchRight(rightMatch)

Expected Either not to match right:
  /a/

Received right:
  "aa""
`;

exports[`.not.toMatchRight() fails when spec deeply matches the object on the right 1`] = `
"expect(received).not.toMatchRight(rightMatch)

Expected Either not to match right:
  {"b": {"c": 2}}

Received right:
  {"a": 1, "b": {"c": 2, "d": 3}}"
`;

exports[`.not.toMatchRight() fails when spec matches the object on the right 1`] = `
"expect(received).not.toMatchRight(rightMatch)

Expected Either not to match right:
  {"a": 1}

Received right:
  {"a": 1, "b": 2}"
`;

exports[`.toMatchRight() fails when object is a left 1`] = `
"expect(received).toMatchRight(rightMatch)

Expected Either to match right:
  {"a": 1}

Received left."
`;

exports[`.toMatchRight() fails when regular expression does not match a string on the right 1`] = `
"expect(received).toMatchRight(rightMatch)

Expected Either to match right:
  /b/

Received right:
  "aa""
`;

exports[`.toMatchRight() fails when spec does not match the object on the left 1`] = `
"expect(received).toMatchRight(rightMatch)

Expected Either to match right:
  {"a": 2}

Received right:
  {"a": 1}"
`;
